# Q-A-Chatbot-Using-OpenAI-And-Ollama

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
